--- a/package.xml
+++ b/package.xml
@@ -71,5 +71,6 @@
   <!-- The export tag contains other, unspecified, tags -->
   <export>
     <!-- Other tools can request additional information be placed here -->
+    <gazebo_ros plugin_path="${GAZEBO_PLUGIN_PATH}" gazebo_media_path="${GAZEBO_MODEL_PATH}" />
   </export>
 </package>
