--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,7 @@ find_package(catkin REQUIRED COMPONENTS
   nav_msgs
   geometry_msgs
   gazebo_ros
+  message_generation
 )
 
 ## System dependencies are found with CMake's conventions
@@ -53,11 +54,12 @@ link_directories(${GAZEBO_LIBRARY_DIRS})
 ##   * add every package in MSG_DEP_SET to generate_messages(DEPENDENCIES ...)
 
 ## Generate messages in the 'msg' folder
-# add_message_files(
-#   FILES
+add_message_files(
+  FILES
+  map_msg.msg
 #   Message1.msg
 #   Message2.msg
-# )
+)
 
 ## Generate services in the 'srv' folder
 # add_service_files(
@@ -74,10 +76,10 @@ link_directories(${GAZEBO_LIBRARY_DIRS})
 # )
 
 ## Generate added messages and services with any dependencies listed here
-# generate_messages(
-#   DEPENDENCIES
-#   std_msgs
-# )
+generate_messages(
+  DEPENDENCIES
+  geometry_msgs
+)
 
 ################################################
 ## Declare ROS dynamic reconfigure parameters ##
@@ -112,6 +114,8 @@ catkin_package(
   DEPENDS
     roscpp
     gazebo_ros
+    geometry_msgs
+    message_runtime
   # INCLUDE_DIRS include
   # LIBRARIES lazy_theta_star
   # CATKIN_DEPENDS roscpp rospy std_msgs nav_msgs geometry_msgs
