--- a/package.xml
+++ b/package.xml
@@ -55,20 +55,21 @@
   <build_depend>nav_msgs</build_depend>
   <build_depend>geometry_msgs</build_depend>
   <build_depend>gazebo_ros</build_depend>
-  <build_depend>message_generation</build_depend>
+  <build_depend>yaml-cpp</build_depend>
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>rospy</build_export_depend>
   <build_export_depend>std_msgs</build_export_depend>
   <build_export_depend>nav_msgs</build_export_depend>
   <build_export_depend>geometry_msgs</build_export_depend>
   <build_export_depend>gazebo_ros</build_export_depend>
+  <build_export_depend>yaml-cpp</build_export_depend>
   <exec_depend>roscpp</exec_depend>
   <exec_depend>rospy</exec_depend>
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>nav_msgs</exec_depend>
   <exec_depend>geometry_msgs</exec_depend>
   <exec_depend>gazebo_ros</exec_depend>
-  <exec_depend>message_runtime</exec_depend>
+  <exec_depend>yaml-cpp</exec_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
