--- a/package.xml
+++ b/package.xml
@@ -7,7 +7,7 @@
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="root@todo.todo">root</maintainer>
+  <maintainer email="fragarflo2@alum.us.es">root</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
@@ -55,7 +55,7 @@
   <build_depend>nav_msgs</build_depend>
   <build_depend>geometry_msgs</build_depend>
   <build_depend>gazebo_ros</build_depend>
-  <build_depend>a_star</build_depend>
+  <build_depend>uav_abstraction_layer</build_depend>
   <!-- <build_depend>yaml-cpp</build_depend> -->
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>rospy</build_export_depend>
@@ -63,7 +63,7 @@
   <build_export_depend>nav_msgs</build_export_depend>
   <build_export_depend>geometry_msgs</build_export_depend>
   <build_export_depend>gazebo_ros</build_export_depend>
-  <build_export_depend>a_star</build_export_depend>
+  <build_export_depend>uav_abstraction_layer</build_export_depend>
   <!-- <build_export_depend>yaml-cpp</build_export_depend> -->
   <exec_depend>roscpp</exec_depend>
   <exec_depend>rospy</exec_depend>
@@ -71,7 +71,7 @@
   <exec_depend>nav_msgs</exec_depend>
   <exec_depend>geometry_msgs</exec_depend>
   <exec_depend>gazebo_ros</exec_depend>
-  <exec_depend>a_star</exec_depend>
+  <exec_depend>uav_abstraction_layer</exec_depend>
   <!-- <exec_depend>yaml-cpp</exec_depend> -->
 
   <!-- The export tag contains other, unspecified, tags -->
